[gd_scene load_steps=4 format=3 uid="uid://dkwou2wjj20c7"]

[ext_resource type="Script" path="res://characters/leg.gd" id="1_sm1hk"]

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_6ef7c"]
target_nodepath = NodePath("../FootTarget")
tip_nodepath = NodePath("HipBone/KneeBone/FootBone")
ccdik_data_chain_length = 2
joint_data/0/bone_index = 0
joint_data/0/bone2d_node = NodePath("HipBone")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = true
joint_data/0/constraint_angle_min = 85.0
joint_data/0/constraint_angle_max = -160.0
joint_data/0/constraint_angle_invert = true
joint_data/0/constraint_in_localspace = true
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 1
joint_data/1/bone2d_node = NodePath("HipBone/KneeBone")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = true
joint_data/1/constraint_angle_min = 5.0
joint_data/1/constraint_angle_max = 120.0
joint_data/1/constraint_angle_invert = false
joint_data/1/constraint_in_localspace = true
joint_data/1/editor_draw_gizmo = true

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_tskyx"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification2DCCDIK_6ef7c")

[node name="Legs" type="Node2D"]
script = ExtResource("1_sm1hk")

[node name="GroundFinder" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 1000)

[node name="Skeleton2D" type="Skeleton2D" parent="."]
unique_name_in_owner = true
modification_stack = SubResource("SkeletonModificationStack2D_tskyx")

[node name="HipBone" type="Bone2D" parent="Skeleton2D"]
unique_name_in_owner = true
rotation = -0.0581854
scale = Vector2(0.999982, 0.999982)
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 25.002
bone_angle = 89.9999
metadata/_local_pose_override_enabled_ = true

[node name="HipBoneColor" type="ColorRect" parent="Skeleton2D/HipBone"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_right = 10.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="KneeBone" type="Bone2D" parent="Skeleton2D/HipBone"]
unique_name_in_owner = true
position = Vector2(0, 25)
rotation = 0.0872665
scale = Vector2(1.00001, 1.00001)
rest = Transform2D(1, 0, 0, 1, 0, 25)
metadata/_local_pose_override_enabled_ = true

[node name="FootBone" type="Bone2D" parent="Skeleton2D/HipBone/KneeBone"]
unique_name_in_owner = true
position = Vector2(0, 25)
scale = Vector2(1e-05, 1e-05)
rest = Transform2D(1, 0, 0, 1, 0, 25)

[node name="FootBoneColor" type="ColorRect" parent="Skeleton2D/HipBone/KneeBone"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_right = 10.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="FootTarget" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 330)

[node name="ColorRect" type="ColorRect" parent="FootTarget"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)
